--- a/html/chemistry.html
+++ b/html/chemistry.html
@@ -7,15 +7,18 @@
   <script src="../script.js"></script>
   <body>
 
-
       <h1>Edu-tech</h1>
+
+          <h2 id="title_school">The New School</h2>
 
       <div id="chemistry">
         <h2 id="title_background">Chemistry A</h2>
 
+            <p>Main responsible: Carlos <br> Chemistry course start: 01.04</p>
+
         <div class="weeks_list">
             <button id="b_1" onclick="showHide(this.id)">Week 1</button>
-            <div id="week_1">
+            <div class="block" id="week_1">
                 <p>Week 1:<br>
                 Blabla</p>
                 <img src="../resources/css/hacksaw.webp" alt="Brushes">
@@ -24,11 +27,14 @@
 
         <div class="weeks_list">
             <button id="b_2" onclick="showHide(this.id)">Week 2</button>
-            <div id="week_2">
+            <div class="block" id="week_2">
             Week 2:
             </div>
         </div>
 
+        <div class="weeks_list">
+            <button id="b_3" >Week 3</button>
+        </div>
       </div>
 
   </body>
