--- a/index2.html
+++ b/index2.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <link href="../resources/css/index.css" type="text/css" rel="stylesheet">
+  <link href="./resources/css/index.css" type="text/css" rel="stylesheet">
   <title>Edutech Main</title>
 </head>
 <script src="script.js"></script>
 <body>
 
-    <img src="../resources/css/Edutech.png" alt="Edutech Title" width="100">
+  <img src="resources/css/Edutech.png" alt="Edutech Title" width="100">
 
-    <h1>The New School</h1>
+  <h1>The New School</h1>
 
   <div id="school">
 
-    <p>Student: Yang <br> Grade: 9</p>
+    <p>Student: Anna <br> Grade: 11</p>
 
     <table id="table_content">
       <tr id="title_tr">
@@ -32,15 +32,16 @@
       </tr>
       <tr>
         <th>10.00-11.00</th>
-        <th rowspan="2"> Chemistry</a> </th>
-        <th rowspan="2"> Math </th>
-        <th rowspan="2"> Physics </th>
-        <th rowspan="2"> Biology </th>
-        <th rowspan="2"> Language </th>
+        <th> <a href="html/chemistry.html">Chemistry</a> </th>
+        <th> Math </th>
+        <th> Physics </th>
+        <th> Biology </th>
+        <th> Language </th>
         <th rowspan="5">Special</th>
       </tr>
       <tr>
         <th>11.00-12.00</th>
+        <th colspan="5">Self-study<br> Group work</th>
       </tr>
       <tr>
         <th>12.00-13.00</th>
@@ -48,36 +49,36 @@
       </tr>
       <tr>
         <th>13.00-14.00</th>
-        <th rowspan="2">Language 2</th>
-        <th rowspan="2">Arts/ <br> Philosophy </th>
-        <th rowspan="2">Sport</th>
-        <th rowspan="2">History/ <br> Politics </th>
-        <th rowspan="2">Geography/ <br> Politics </th>
+        <th>Language 2</th>
+        <th>Arts</th>
+        <th>Sport</th>
+        <th>History</th>
+        <th>Geography</th>
       </tr>
       <tr>
         <th>14.00-15.00</th>
+        <th>Language 2<br> Seminar</th>
+        <th>Practical Arts</th>
+        <th>Sport</th>
+        <th>Self-study<br> Group work</th>
+        <th>Self-study<br> Group work</th>
       </tr>
       <tr>
         <th>15.00-16.00</th>
-        <th colspan="5">Tutoriums</th>
+        <th colspan="5">Break<br>Wellbeing</th>
         <th></th>
       </tr>
       <tr>
         <th>16.00-17.00</th>
-        <th></th>
-        <th></th>
-        <th></th>
-        <th></th>
-        <th></th>
+        <th>Computer science</th>
+        <th>Philosophy</th>
+        <th colspan="3" rowspan="2">Tutoriums</th>
         <th></th>
       </tr>
       <tr>
         <th>17.00-18.00</th>
-        <th></th>
-        <th></th>
-        <th></th>
-        <th></th>
-        <th></th>
+        <th>Self-study Group work</th>
+        <th>Self-study Group work</th>
         <th></th>
       </tr>
     </table>
