--- a/html/chemistry.html
+++ b/html/chemistry.html
@@ -6,15 +6,15 @@
   </head>
   <script src="../script.js"></script>
   <body>
+      
+      <img src="../resources/css/Edutech.png" alt="Edutech Title" width="100">
 
-      <h1>Edu-tech</h1>
-
-          <h2 id="title_school">The New School</h2>
+      <h1>The New School</h1>
 
       <div id="chemistry">
         <h2 id="title_background">Chemistry A</h2>
 
-            <p>Main responsible: Carlos <br> Chemistry course start: 01.04</p>
+            <p>Main responsible: Miss Carlos <br> Chemistry course start: 25/07</p>
 
         <div class="weeks_list">
             <button id="b_1" onclick="showHide(this.id)">Week 1</button>
@@ -28,7 +28,15 @@
         <div class="weeks_list">
             <button id="b_2" onclick="showHide(this.id)">Week 2</button>
             <div class="block" id="week_2">
-            Week 2:
+            <p>
+                Week 2: from 01/08 to 09/08 <br>
+                <h4>Chemistry stuff</h3>
+                Video and explanations:
+                <h4>Assignment</h3>
+                Finishing deadline at 08/08, 20.00 pm. <br> <br>
+                Watch the videos first before you start the assignment. <br>
+                <a href="chemistry-as1.html" target="_blank">Click here to start</a>
+            </p>
             </div>
         </div>
 
