--- a/index.html
+++ b/index.html
@@ -7,81 +7,22 @@
 <script src="script.js"></script>
 <body>
 
-  <h1>Edu-tech</h1>
+  <img src="resources/css/Edutech.png" alt="Edutech Title" width="100">
 
-  <div id="school">
+  <h1>The New School</h1>
 
-    <h2 id="title_school">The New School</h2>
+  <div class="center">
 
-    <p>Student: Anna <br> Grade: 11</p>
+    <h3>Please enter your student ID and password.</h3>
+    <div class="form-element">
+      <label for="id">ID</label>
+      <input type="text" name="idlabel" id="idlabel" /> <br> <br>
 
-    <table id="table_content">
-      <tr id="title_tr">
-        <th>Timetable</th>
-        <th>Monday</th>
-        <th>Tuesday</th>
-        <th>Wednesday</th>
-        <th>Thursday</th>
-        <th>Friday</th>
-        <th>Saturday</th>
-      </tr>
-      <tr>
-        <th>9.15-10.00</th>
-        <th colspan="5">Introduction<br>Wellbeing</th>
-        <th></th>
-      </tr>
-      <tr>
-        <th>10.00-11.00</th>
-        <th> <a href="html/chemistry.html">Chemistry</a> </th>
-        <th> Math </th>
-        <th> Physics </th>
-        <th> Biology </th>
-        <th> Language </th>
-        <th rowspan="5">Special</th>
-      </tr>
-      <tr>
-        <th>11.00-12.00</th>
-        <th colspan="5">Self-study<br> Group work</th>
-      </tr>
-      <tr>
-        <th>12.00-13.00</th>
-        <th colspan="5">Lunch Break</th>
-      </tr>
-      <tr>
-        <th>13.00-14.00</th>
-        <th>Language 2</th>
-        <th>Arts</th>
-        <th>Sport</th>
-        <th>History</th>
-        <th>Geography</th>
-      </tr>
-      <tr>
-        <th>14.00-15.00</th>
-        <th>Language 2<br> Seminar</th>
-        <th>Practical Arts</th>
-        <th>Sport</th>
-        <th>Self-study<br> Group work</th>
-        <th>Self-study<br> Group work</th>
-      </tr>
-      <tr>
-        <th>15.00-16.00</th>
-        <th colspan="5">Break<br>Wellbeing</th>
-        <th></th>
-      </tr>
-      <tr>
-        <th>16.00-17.00</th>
-        <th>Computer science</th>
-        <th>Philosophy</th>
-        <th colspan="3" rowspan="2">Tutoriums</th>
-        <th></th>
-      </tr>
-      <tr>
-        <th>17.00-18.00</th>
-        <th>Self-study Group work</th>
-        <th>Self-study Group work</th>
-        <th></th>
-      </tr>
-    </table>
+      <label for="password">Password</label>
+      <input type="password" name="pwlabel" id="pwlabel" /> <br><br>
+
+      <button id="loginbutton" onclick="login()">Login</button>
+    </div>
 
   </div>
 
