--- a/html/chemistry.html
+++ b/html/chemistry.html
@@ -6,7 +6,7 @@
   </head>
   <script src="../script.js"></script>
   <body>
-      
+
       <img src="../resources/css/Edutech.png" alt="Edutech Title" width="100">
 
       <h1>The New School</h1>
@@ -14,7 +14,7 @@
       <div id="chemistry">
         <h2 id="title_background">Chemistry A</h2>
 
-            <p>Main responsible: Miss Carlos <br> Chemistry course start: 25/07</p>
+            <p>Main responsible: Dr. Bee <br> Chemistry course start: 25/07</p>
 
         <div class="weeks_list">
             <button id="b_1" onclick="showHide(this.id)">Week 1</button>
@@ -30,12 +30,17 @@
             <div class="block" id="week_2">
             <p>
                 Week 2: from 01/08 to 09/08 <br>
-                <h4>Chemistry stuff</h3>
-                Video and explanations:
+                <h4>Material Chemistry: Unit cell introduction</h3>
+                Video and explanations for this week: <br>
+
+                <iframe id="video" width="560" height="315" src="https://www.youtube.com/embed/X4YYHXueq4E" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <button id="alt1" onclick="altvid()">Alternative 1</button>
+                <button id="alt2" >Alternative 2</button>
+
                 <h4>Assignment</h3>
                 Finishing deadline at 08/08, 20.00 pm. <br> <br>
                 Watch the videos first before you start the assignment. <br>
-                <a href="chemistry-as1.html" target="_blank">Click here to start</a>
+                <a href="chemistry-as1.html" target="_blank">-> Click here to start</a>
             </p>
             </div>
         </div>
